all functionality tested moving to youtube integration

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
 # Discord Configuration
 DISCORD_BOT_TOKEN=ODc0NDI2MDg5MDA5NzEzMTYz.GelJpz.UvP85mgcgqOKVJyaGsAS9AEHZgnLVSoNfGND3g
 
+# X/Twitter API credentials
 X_API_BEARER=AAAAAAAAAAAAAAAAAAAAABrh5wEAAAAAVtoNDX1q80XGKIk6%2BxcdC5RpMIo%3DmPu91Wl6dA4SQxKhNFVWyN91UYP5O4BaPrEfNQ0XoBgkXrgCbA
 UCG_EN_X_ID=1798233243185303552
+
+# YouTube API credentials (optional - not yet implemented)
+# YOUTUBE_API_KEY=AIzaSyD4YjC4RgtYRX3NSalpXmyFOO--8WUzt94
+
 # Sources to Monitor (comment out to disable a source)
 FACEBOOK_PAGE=ultramancardgame
 TWITTER_USERNAME=ucg_en
@@ -10,7 +15,7 @@ ULTRAMAN_COLUMN_URL=https://ultraman-cardgame.com/page/us/column/column-list
 ULTRAMAN_NEWS_URL=https://ultraman-cardgame.com/page/us/news/news-list
 
 # Bot Settings
-POLL_INTERVAL_SECONDS=900  # 15 minutes (X API rate limit requirement)
+POLL_INTERVAL_SECONDS=900
 CHANNEL_NAME=ucg-news-bot
 LOG_LEVEL=INFO
 
