update for youtube

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,14 @@ DISCORD_BOT_TOKEN=ODc0NDI2MDg5MDA5NzEzMTYz.GelJpz.UvP85mgcgqOKVJyaGsAS9AEHZgnLVS
 X_API_BEARER=AAAAAAAAAAAAAAAAAAAAABrh5wEAAAAAVtoNDX1q80XGKIk6%2BxcdC5RpMIo%3DmPu91Wl6dA4SQxKhNFVWyN91UYP5O4BaPrEfNQ0XoBgkXrgCbA
 UCG_EN_X_ID=1798233243185303552
 
-# YouTube API credentials (optional - not yet implemented)
-# YOUTUBE_API_KEY=AIzaSyD4YjC4RgtYRX3NSalpXmyFOO--8WUzt94
+# YouTube API credentials
+YOUTUBE_API_KEY=AIzaSyD4YjC4RgtYRX3NSalpXmyFOO--8WUzt94
+YOUTUBE_CHANNEL_ID=UC0WwX8aoBWRAdQ2bM-FD8TQ
 
 # Sources to Monitor (comment out to disable a source)
 FACEBOOK_PAGE=ultramancardgame
 TWITTER_USERNAME=ucg_en
+YOUTUBE_CHANNEL_ID=UC0WwX8aoBWRAdQ2bM-FD8TQ  # @ultramancardgame_official
 ULTRAMAN_COLUMN_URL=https://ultraman-cardgame.com/page/us/column/column-list
 ULTRAMAN_NEWS_URL=https://ultraman-cardgame.com/page/us/news/news-list
 
