--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,35 @@
+# =============================================================================
+# Environment Configuration Template
+# =============================================================================
+# Copy this file to .env and fill in your actual values
+# NEVER commit your .env file to git!
+#
+# For GitHub Actions:
+# Add these secrets in your repository: Settings > Secrets and variables > Actions
+# The workflow file (.github/workflows/news-bot.yml) will automatically use them
+# =============================================================================
+
 # Discord Configuration
-DISCORD_BOT_TOKEN=ODc0NDI2MDg5MDA5NzEzMTYz.GelJpz.UvP85mgcgqOKVJyaGsAS9AEHZgnLVSoNfGND3g
+DISCORD_BOT_TOKEN=your_discord_bot_token_here
+CHANNEL_NAME=ucg-news-bot
 
 # X/Twitter API credentials
-X_API_BEARER=AAAAAAAAAAAAAAAAAAAAABrh5wEAAAAAVtoNDX1q80XGKIk6%2BxcdC5RpMIo%3DmPu91Wl6dA4SQxKhNFVWyN91UYP5O4BaPrEfNQ0XoBgkXrgCbA
+X_API_BEARER=your_x_api_bearer_token_here
 UCG_EN_X_ID=1798233243185303552
 
 # YouTube API credentials
-YOUTUBE_API_KEY=AIzaSyD4YjC4RgtYRX3NSalpXmyFOO--8WUzt94
+YOUTUBE_API_KEY=your_youtube_api_key_here
 YOUTUBE_CHANNEL_ID=UC0WwX8aoBWRAdQ2bM-FD8TQ
 
 # Sources to Monitor (comment out to disable a source)
-FACEBOOK_PAGE=ultramancardgame
 TWITTER_USERNAME=ucg_en
 YOUTUBE_CHANNEL_ID=UC0WwX8aoBWRAdQ2bM-FD8TQ  # @ultramancardgame_official
 ULTRAMAN_COLUMN_URL=https://ultraman-cardgame.com/page/us/column/column-list
 ULTRAMAN_NEWS_URL=https://ultraman-cardgame.com/page/us/news/news-list
 
 # Bot Settings
-POLL_INTERVAL_SECONDS=900
-CHANNEL_NAME=ucg-news-bot
 LOG_LEVEL=INFO
+# Note: POLL_INTERVAL_SECONDS removed - now runs as a cron job every 15 minutes
 
 # Database Configuration
 DATABASE_PATH=./bot_data.db
