--- a/.github/workflows/news-bot.yml
+++ b/.github/workflows/news-bot.yml
@@ -2,7 +2,7 @@ name: UCG News Bot
 
 on:
   schedule:
-    - cron: '*/15 * * * *'  # Every 15 minutes
+    - cron: "*/15 * * * *"  # Every 15 minutes
   workflow_dispatch:  # Manual trigger for testing
 
 jobs:
