--- a/.github/workflows/news-bot.yml
+++ b/.github/workflows/news-bot.yml
@@ -3,7 +3,7 @@ name: UCG News Bot
 on:
   workflow_dispatch:  # Manual trigger for testing
   schedule:
-    - cron: "*15 * * * *"  # Every 15 minutes
+    - cron: "*/15 * * * *"  # Every 15 minutes
 
 
 jobs:
